v0.9 - Pending
	+ Save/load accel_map in case user edits any gtk accelerators
	+ Bug: Fullscreen controls can be on wrong screen with Xinerama
	+ Bug: Scrollbars don't appear correctly on window resizes
	+ Bug: Panning images doesn't always work properly

v0.8.1 - October 19, 2006
	+ Add list of image names to custom actions (%L)
	+ Improved preloading/navigation handling
	+ Menu improvements; added Custom Actions to EditMenu
	+ Try gnome-open/exo-open first for opening help, then fallback
	+ Bug: Next/brevious buttons block with mouse over it
	+ Bug: Ctrl-0/1 shortcuts don't work from numpad with numlock on
	+ Bug: Custom actions don't execute when using --verbose
	+ Bug: Cannot install when X server isn't running
	+ Updated icon (William Rea)

v0.8 - September 4, 2006
	+ Editing capabilities: resize, crop, save, delete, rename
	+ Pref to preload images for faster navigation (enabled by default)
	+ Implemented 'custom actions' framework, including batch actions
	+ --onload or -o argument for performing actions on image loading
	+ Added File > Properties to display image properties
	+ Show "Scanning..." in statusbar when scanning for images; Escape to abort
	+ Reduce GTK+ requirement to 2.6.0
	+ Bug: Opening with 'load all images in dir' gives expected result
	+ Bug: Cannot open folder while search process is active
	+ Added French translation (Mike Massonnet)
	+ Added Polish translation (Tomasz Dominikowski)
	+ Added Russian translation (mavka)

v0.7.3 - August 2, 2006
	+ Fix crash when loading images in certain circumstances

v0.7.2 - August 1, 2006
	+ Preference to automatically start the slideshow in fullscreen mode
	+ Background image search process to load image faster
	+ Added cli argument: -s or --slideshow to start in slideshow mode
	+ Added cli argument: -f or --fullscreen to start in fullscreen mode
	+ Additional shortcuts: +/- for zooming in/out
	+ Fixed .desktop mimetypes
	+ Added German translation (Bjoern Martensen)