@@ -6,7 +6,6 @@ Next
 + Image effect - saturation
 + mirage --add to add image to current instance instead of opening
   new window
-+ Saving image with transparency is messed up
 + jpeg exif suff?
 
 Future
