@@ -3,6 +3,7 @@ v0.9 - Pending
 	+ Bug: Fullscreen controls can be on wrong screen with Xinerama
 	+ Bug: Scrollbars don't appear correctly on window resizes
 	+ Bug: Panning images doesn't always work properly
+	+ Bug: Alpha channel is lost when resizing image with transparency
 
 v0.8.1 - October 19, 2006
 	+ Add list of image names to custom actions (%L)
